--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
-/*  your css code here. If applicable */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: black; /* Changed background color for better visibility */
+}
+
+.star {
+    position: relative;
+    display: inline-block;
+    color: yellow;
+    width: 0;
+    height: 0;
+    border-right: 50px solid transparent;
+    border-bottom: 30px solid yellow; /* Adjusted height for symmetry */
+    border-left: 50px solid transparent;
+    transform: rotate(35deg);
+}
+
+.star:before {
+    border-bottom: 40px solid yellow;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: -25px;
+    left: -50px; /* Adjusted left position for symmetry */
+    display: block;
+    content: '';
+    transform: rotate(-35deg);
+}
+
+.star:after {
+    position: absolute;
+    display: block;
+    color: yellow;
+    top: 3px;
+    left: -65px;
+    width: 0px;
+    height: 0px;
+    border-right: 50px solid transparent;
+    border-bottom: 30px solid yellow; /* Adjusted height for symmetry */
+    border-left: 50px solid transparent;
+    transform: rotate(-70deg);
+    content: '';
+}
