--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,9 @@ body {
     color: yellow;
     width: 0;
     height: 0;
-    border-right: 50px solid transparent;
-    border-bottom: 30px solid yellow; /* Adjusted height for symmetry */
-    border-left: 50px solid transparent;
+    border-right: 50px solid rgba(0,0,0,0);
+    border-bottom: 100px solid rgb(255,255,0); /* Adjusted height for symmetry */
+    border-left: 50px solid rgba(0,0,0,0);
     transform: rotate(35deg);
 }
 
